# maestro-fn

./: .gitignore  Cargo.toml  README.md
examples/: 01_core_pipe.rs  02_string_chain.rs  03_collections.rs  04_macros.rs  05_async_time.rs  06_middleware.rs  07_json.rs  08_http_file.rs  09_full_demo.rs
src/: client.rs  file.rs  fn.rs  get.rs  json.rs  lib.rs  macros.rs  pipe.rs  response.rs  str.rs  time.rs
